--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/hanoi.css" media="screen">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/bundle.js"></script>
     <title>TypeScript Towers of Hanoi</title>
   </head>
   <body>
     <h1>TypeScript Towers of Hanoi</h1>
+    <figure class="hanoi"></figure>
   </body>
 </html>
