Add links to index

--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
   <body>
     <h1>TypeScript Towers of Hanoi</h1>
     <figure class="hanoi"></figure>
+    <div class='footer'>
+      <span>
+        <a class='link' href='https://github.com/samueljo/typescript-hanoi'>GitHub</a>
+      </span>
+      <span>
+        <a class='link' href='http://www.samueljo.com/'>Portfolio</a>
+      </span>
+      <span>
+        <a class='link' href='https://www.linkedin.com/in/samueljo1'>LinkedIn</a>
+      </span>
+    </div>
   </body>
 </html>
